// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExploreContent dispatches openModal when image is clicked 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__ContentWrapper-sc-c3jdxk-12 iDAgUR ejSrKu"
      >
        <section
          class="CombinedStyling__Section-sc-c3jdxk-10 juobxy"
          style="align-items: center;"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 CombinedStyling__FlexColumnFullWidth-sc-c3jdxk-6 escqfF ckFvxY leZDxE dWuEVk"
          >
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 fWjcNC ckFvxY"
              style="margin: 0px auto;"
            >
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 ExploreContent__GridContainer-sc-ujjh1b-0 eYNhLJ ciirxo"
              >
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 CombinedStyling__FlexRowFullWidth-sc-c3jdxk-5 Aqjcw ckFvxY fjNDtr dVZbKj"
                >
                  <span
                    class="CombinedStyling__Span-sc-c3jdxk-1 cViweD"
                  >
                    cats
                  </span>
                </div>
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 ExploreContent__GridImageContainer-sc-ujjh1b-1 escqfF cyzosQ"
                >
                  <img
                    alt="cat pic"
                    aria-label="cat pic"
                    class="ExploreContent__GridImage-sc-ujjh1b-2 bRILmk"
                    src="cat.jpg"
                  />
                </div>
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 ExploreContent__GridImageContainer-sc-ujjh1b-1 escqfF cyzosQ"
                >
                  <video
                    aria-label="cat video"
                    class="ExploreContent__GridVideo-sc-ujjh1b-3 bnOYjy"
                    src="cat.mp4"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            data-testid="loading-image"
          />
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__ContentWrapper-sc-c3jdxk-12 iDAgUR ejSrKu"
    >
      <section
        class="CombinedStyling__Section-sc-c3jdxk-10 juobxy"
        style="align-items: center;"
      >
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 CombinedStyling__FlexColumnFullWidth-sc-c3jdxk-6 escqfF ckFvxY leZDxE dWuEVk"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 fWjcNC ckFvxY"
            style="margin: 0px auto;"
          >
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 ExploreContent__GridContainer-sc-ujjh1b-0 eYNhLJ ciirxo"
            >
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 CombinedStyling__FlexRowFullWidth-sc-c3jdxk-5 Aqjcw ckFvxY fjNDtr dVZbKj"
              >
                <span
                  class="CombinedStyling__Span-sc-c3jdxk-1 cViweD"
                >
                  cats
                </span>
              </div>
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 ExploreContent__GridImageContainer-sc-ujjh1b-1 escqfF cyzosQ"
              >
                <img
                  alt="cat pic"
                  aria-label="cat pic"
                  class="ExploreContent__GridImage-sc-ujjh1b-2 bRILmk"
                  src="cat.jpg"
                />
              </div>
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 ExploreContent__GridImageContainer-sc-ujjh1b-1 escqfF cyzosQ"
              >
                <video
                  aria-label="cat video"
                  class="ExploreContent__GridVideo-sc-ujjh1b-3 bnOYjy"
                  src="cat.mp4"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          data-testid="loading-image"
        />
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`ExploreContent renders loading image 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__ContentWrapper-sc-c3jdxk-12 iDAgUR ejSrKu"
      >
        <section
          class="CombinedStyling__Section-sc-c3jdxk-10 juobxy"
          style="align-items: center;"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 CombinedStyling__FlexColumnFullWidth-sc-c3jdxk-6 escqfF ckFvxY leZDxE dWuEVk"
          >
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 fWjcNC ckFvxY"
              style="margin: 0px auto;"
            >
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 ExploreContent__GridContainer-sc-ujjh1b-0 eYNhLJ ciirxo"
              >
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 CombinedStyling__FlexRowFullWidth-sc-c3jdxk-5 Aqjcw ckFvxY fjNDtr dVZbKj"
                >
                  <span
                    class="CombinedStyling__Span-sc-c3jdxk-1 cViweD"
                  >
                    cats
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            data-testid="loading-image"
          />
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__ContentWrapper-sc-c3jdxk-12 iDAgUR ejSrKu"
    >
      <section
        class="CombinedStyling__Section-sc-c3jdxk-10 juobxy"
        style="align-items: center;"
      >
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 CombinedStyling__FlexColumnFullWidth-sc-c3jdxk-6 escqfF ckFvxY leZDxE dWuEVk"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 fWjcNC ckFvxY"
            style="margin: 0px auto;"
          >
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 ExploreContent__GridContainer-sc-ujjh1b-0 eYNhLJ ciirxo"
            >
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 CombinedStyling__FlexRowFullWidth-sc-c3jdxk-5 Aqjcw ckFvxY fjNDtr dVZbKj"
              >
                <span
                  class="CombinedStyling__Span-sc-c3jdxk-1 cViweD"
                >
                  cats
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          data-testid="loading-image"
        />
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`ExploreContent renders posts after fetching 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__ContentWrapper-sc-c3jdxk-12 iDAgUR ejSrKu"
      >
        <section
          class="CombinedStyling__Section-sc-c3jdxk-10 juobxy"
          style="align-items: center;"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 CombinedStyling__FlexColumnFullWidth-sc-c3jdxk-6 escqfF ckFvxY leZDxE dWuEVk"
          >
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 fWjcNC ckFvxY"
              style="margin: 0px auto;"
            >
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 ExploreContent__GridContainer-sc-ujjh1b-0 eYNhLJ ciirxo"
              >
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 CombinedStyling__FlexRowFullWidth-sc-c3jdxk-5 Aqjcw ckFvxY fjNDtr dVZbKj"
                >
                  <span
                    class="CombinedStyling__Span-sc-c3jdxk-1 cViweD"
                  >
                    cats
                  </span>
                </div>
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 ExploreContent__GridImageContainer-sc-ujjh1b-1 escqfF cyzosQ"
                >
                  <img
                    alt="cat pic"
                    aria-label="cat pic"
                    class="ExploreContent__GridImage-sc-ujjh1b-2 bRILmk"
                    src="cat.jpg"
                  />
                </div>
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 ExploreContent__GridImageContainer-sc-ujjh1b-1 escqfF cyzosQ"
                >
                  <video
                    aria-label="cat video"
                    class="ExploreContent__GridVideo-sc-ujjh1b-3 bnOYjy"
                    src="cat.mp4"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            data-testid="loading-image"
          />
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__ContentWrapper-sc-c3jdxk-12 iDAgUR ejSrKu"
    >
      <section
        class="CombinedStyling__Section-sc-c3jdxk-10 juobxy"
        style="align-items: center;"
      >
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 CombinedStyling__FlexColumnFullWidth-sc-c3jdxk-6 escqfF ckFvxY leZDxE dWuEVk"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 fWjcNC ckFvxY"
            style="margin: 0px auto;"
          >
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 ExploreContent__GridContainer-sc-ujjh1b-0 eYNhLJ ciirxo"
            >
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 CombinedStyling__FlexRowFullWidth-sc-c3jdxk-5 Aqjcw ckFvxY fjNDtr dVZbKj"
              >
                <span
                  class="CombinedStyling__Span-sc-c3jdxk-1 cViweD"
                >
                  cats
                </span>
              </div>
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 ExploreContent__GridImageContainer-sc-ujjh1b-1 escqfF cyzosQ"
              >
                <img
                  alt="cat pic"
                  aria-label="cat pic"
                  class="ExploreContent__GridImage-sc-ujjh1b-2 bRILmk"
                  src="cat.jpg"
                />
              </div>
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 ExploreContent__GridImageContainer-sc-ujjh1b-1 escqfF cyzosQ"
              >
                <video
                  aria-label="cat video"
                  class="ExploreContent__GridVideo-sc-ujjh1b-3 bnOYjy"
                  src="cat.mp4"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          data-testid="loading-image"
        />
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`ExploreContent shows 'No results found' if posts are empty 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__ContentWrapper-sc-c3jdxk-12 iDAgUR ejSrKu"
      >
        <section
          class="CombinedStyling__Section-sc-c3jdxk-10 juobxy"
          style="align-items: center;"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 CombinedStyling__FlexColumnFullWidth-sc-c3jdxk-6 escqfF ckFvxY leZDxE dWuEVk"
          >
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 fWjcNC ckFvxY"
              style="margin: 0px auto;"
            >
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 ExploreContent__GridContainer-sc-ujjh1b-0 eYNhLJ ciirxo"
              >
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 CombinedStyling__FlexRowFullWidth-sc-c3jdxk-5 Aqjcw ckFvxY fjNDtr dVZbKj"
                >
                  <span
                    class="CombinedStyling__Span-sc-c3jdxk-1 jiWybo"
                  >
                    No results found for term:
                  </span>
                  <span
                    class="CombinedStyling__Span-sc-c3jdxk-1 cViweD"
                  >
                    cats
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            data-testid="loading-image"
          />
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__ContentWrapper-sc-c3jdxk-12 iDAgUR ejSrKu"
    >
      <section
        class="CombinedStyling__Section-sc-c3jdxk-10 juobxy"
        style="align-items: center;"
      >
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 CombinedStyling__FlexColumnFullWidth-sc-c3jdxk-6 escqfF ckFvxY leZDxE dWuEVk"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 fWjcNC ckFvxY"
            style="margin: 0px auto;"
          >
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 ExploreContent__GridContainer-sc-ujjh1b-0 eYNhLJ ciirxo"
            >
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 CombinedStyling__FlexRowFullWidth-sc-c3jdxk-5 Aqjcw ckFvxY fjNDtr dVZbKj"
              >
                <span
                  class="CombinedStyling__Span-sc-c3jdxk-1 jiWybo"
                >
                  No results found for term:
                </span>
                <span
                  class="CombinedStyling__Span-sc-c3jdxk-1 cViweD"
                >
                  cats
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          data-testid="loading-image"
        />
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`ExploreContent shows overlay with like and comment count on hover 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__ContentWrapper-sc-c3jdxk-12 iDAgUR ejSrKu"
      >
        <section
          class="CombinedStyling__Section-sc-c3jdxk-10 juobxy"
          style="align-items: center;"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 CombinedStyling__FlexColumnFullWidth-sc-c3jdxk-6 escqfF ckFvxY leZDxE dWuEVk"
          >
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 fWjcNC ckFvxY"
              style="margin: 0px auto;"
            >
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 ExploreContent__GridContainer-sc-ujjh1b-0 eYNhLJ ciirxo"
              >
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 CombinedStyling__FlexRowFullWidth-sc-c3jdxk-5 Aqjcw ckFvxY fjNDtr dVZbKj"
                >
                  <span
                    class="CombinedStyling__Span-sc-c3jdxk-1 cViweD"
                  >
                    cats
                  </span>
                </div>
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 ExploreContent__GridImageContainer-sc-ujjh1b-1 escqfF cyzosQ"
                >
                  <img
                    alt="cat pic"
                    aria-label="cat pic"
                    class="ExploreContent__GridImage-sc-ujjh1b-2 bRILmk"
                    src="cat.jpg"
                  />
                  <div
                    class="CombinedStyling__Div-sc-c3jdxk-0 ExploreContent__GridImageOverlay-sc-ujjh1b-4 escqfF iWrloL"
                  >
                    <div
                      class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 escqfF ckFvxY fjNDtr"
                    >
                      <svg
                        class="ExploreContent__HeartFilled-sc-ujjh1b-5 jlseeX"
                        data-testid="heart-svg"
                      />
                      <div
                        class="CombinedStyling__Div-sc-c3jdxk-0 ExploreContent__ImageOverlayText-sc-ujjh1b-7 escqfF cDBZrf"
                      >
                        2
                      </div>
                      <svg
                        class="ExploreContent__Message-sc-ujjh1b-6 iXzIEk"
                        data-testid="message-svg"
                      />
                      <div
                        class="CombinedStyling__Div-sc-c3jdxk-0 ExploreContent__ImageOverlayText-sc-ujjh1b-7 escqfF cDBZrf"
                      >
                        3
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 ExploreContent__GridImageContainer-sc-ujjh1b-1 escqfF cyzosQ"
                >
                  <video
                    aria-label="cat video"
                    class="ExploreContent__GridVideo-sc-ujjh1b-3 bnOYjy"
                    src="cat.mp4"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            data-testid="loading-image"
          />
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__ContentWrapper-sc-c3jdxk-12 iDAgUR ejSrKu"
    >
      <section
        class="CombinedStyling__Section-sc-c3jdxk-10 juobxy"
        style="align-items: center;"
      >
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 CombinedStyling__FlexColumnFullWidth-sc-c3jdxk-6 escqfF ckFvxY leZDxE dWuEVk"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 fWjcNC ckFvxY"
            style="margin: 0px auto;"
          >
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 ExploreContent__GridContainer-sc-ujjh1b-0 eYNhLJ ciirxo"
            >
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 CombinedStyling__FlexRowFullWidth-sc-c3jdxk-5 Aqjcw ckFvxY fjNDtr dVZbKj"
              >
                <span
                  class="CombinedStyling__Span-sc-c3jdxk-1 cViweD"
                >
                  cats
                </span>
              </div>
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 ExploreContent__GridImageContainer-sc-ujjh1b-1 escqfF cyzosQ"
              >
                <img
                  alt="cat pic"
                  aria-label="cat pic"
                  class="ExploreContent__GridImage-sc-ujjh1b-2 bRILmk"
                  src="cat.jpg"
                />
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 ExploreContent__GridImageOverlay-sc-ujjh1b-4 escqfF iWrloL"
                >
                  <div
                    class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 escqfF ckFvxY fjNDtr"
                  >
                    <svg
                      class="ExploreContent__HeartFilled-sc-ujjh1b-5 jlseeX"
                      data-testid="heart-svg"
                    />
                    <div
                      class="CombinedStyling__Div-sc-c3jdxk-0 ExploreContent__ImageOverlayText-sc-ujjh1b-7 escqfF cDBZrf"
                    >
                      2
                    </div>
                    <svg
                      class="ExploreContent__Message-sc-ujjh1b-6 iXzIEk"
                      data-testid="message-svg"
                    />
                    <div
                      class="CombinedStyling__Div-sc-c3jdxk-0 ExploreContent__ImageOverlayText-sc-ujjh1b-7 escqfF cDBZrf"
                    >
                      3
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 ExploreContent__GridImageContainer-sc-ujjh1b-1 escqfF cyzosQ"
              >
                <video
                  aria-label="cat video"
                  class="ExploreContent__GridVideo-sc-ujjh1b-3 bnOYjy"
                  src="cat.mp4"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          data-testid="loading-image"
        />
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;
